# avalon-bot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  how --name-only 62ea004  pyproject.toml  setup.py
avalon/: __init__.py  __main__.py  ai_player.py  bot.py  config.py  game.py  views.py
docs/: API.md  DEVELOPMENT.md  TESTING_GUIDE.md
scripts/: quick_test.py
tests/: __init__.py  test_game_logic.py
